<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">What\'s Your Story?</string>

    <!-- Login -->
    <string name="prompt_enter_username">Username (Use "admin")</string>
    <string name="prompt_enter_password">Password (Use "admin")</string>
    <string name="action_log_in">LOG IN</string>
    <string name="action_sign_up">SIGN UP</string>
    <string name="action_log_in_short">LOG IN</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="login_tagline">Hear about the careers and personal experiences of others and share your own!</string>

    <!-- Signup -->
    <string name="sign_up_title">Join What\'s Your Story!</string>
    <string name="prompt_password_confirmation">Confirm Password</string>
    <string name="prompt_password">Choose Your Password</string>
    <string name="prompt_username">Choose Your Username</string>
    <string name="prompt_email">Enter Your Email</string>
    <string name="action_next_interests">NEXT</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="sign_up_tagline">Find out more about life experiences you are interested in</string>
    <string name="TextView01">1) find people whose stories and experiences interest you</string>

    <!-- Set My initial Profile -->
    <string name="action_my_init_profile_next">Next</string>
    <string name="prompt_title">Enter Your Current Title</string>
    <string name="prompt_name">Your Full Name</string>
    <string name="prompt_company">Enter Your Current Company</string>
    <string name="prompt_location">Current Location (City, State/Country)</string>
    <string name="prompt_phone_number">Your Phone Number</string>
    <string name="init_profile_title">About You</string>
    <string name="init_profile_tagline">Help us match with people you are interested in</string>
    <string name="action_next_myInitProfile">NEXT</string>

    <!-- Choose your skills -->
    <string name="action_skills_next">Choose Your Interests</string>


    <!-- Choose your interests -->
    <string name="action_interests_next">FIND PEOPLE</string>

    <!-- Profileview -->
    <string name="username">Eytan Adar</string>
    <string name="title">UMSI Faculty</string>
    <string name="location">Ann Arbor, MI</string>
    <string name="action_message">MESSAGE</string>
    <string name="action_favorite">FAVORITE</string>
    <string name="skills">Skills</string>
    <string name="experiences">Experience</string>
    <string name="eytanexperiences">Worked with a client in Ann Arbor to redesign their promotional brochures</string>
    <string name="eytanskills">Graphic Design</string>

    <!-- Edit my Profile -->
    <string name="interests">Interests</string>
    <string name="myname">Steve Rogers</string>
    <string name="myinterests">Interests:</string>
    <string name="myinterests1">Computer Science, Windows</string>S
    <string name="myexperiences">Experience:</string>
    <string name="myexperiences1">Watercolor, Engineering</string>
    <string name="myexperiences2">Darling of America</string>
    <string name="myskills">Skills:</string>
    <string name="myskills1">CSS, Craft beer</string>
    <string name="mylocation">Anytown, USA</string>
    <string name="mytitle">Captain America</string>
    <string name="myprofile_name_title">Name</string>
    <string name="myprofile_career_title">Title</string>
    <string name="myprofile_company_title">Company</string>
    <string name="myprofile_location_title">Current Location</string>
    <!-- Nav Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_side_menu">Side Menu</string>

    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>My Profile</item>
        <item>My Messages</item>
        <item>My Favorites</item>
        <item>Log Out</item>
    </string-array>

    <!-- Feed -->
    <string name="feed_title">People you might want to talk to</string>
    <string name="first">Settings</string>
    <string name="descr_overflow_button">Menu</string>
    <string name="title_activity_feed_view">FeedView</string>
    <string name="action_feed_row_1">FeedRow1</string>
    <string name="FeedDescription">People You May Be Interested In</string>
    <!-- Action Bar -->
    <string name="action_search">ActionBarSearch</string>
    <string name="action_important">ActionBarImportant</string>
    <string name="action_settings">Add this person to your favorite</string>
    <string name="action_contact">Contact this person</string>

    <!-- Favorites -->
    <string name="myFavorites">My Favorites</string>

    <!-- Message Dialog -->
    <string name="cancel">Cancel</string>
    <string name="send_message">Go to texting app</string>

    <!--Choose Skills-->
    <string name="chooseskills">Choose your skills</string>
    <string name="tellusskills">Tell us what you\'re great at!</string>
    <string name="choose_skills_programming">Programming</string>
    <string name="choose_skills_design">Design</string>
    <string name="choose_skills_hobbies">Hobbies</string>
    <string name="button1_progtextskills">Java</string>
    <string name="button2_progtextskills">C++</string>
    <string name="button3_progtextskills">Python</string>
    <string name="button4_progtextskills">Ruby</string>
    <string name="button5_progtextskills">Javascript</string>
    <string name="button1_destextskills">UX Design</string>
    <string name="button2_destextskills">Web Design</string>
    <string name="button3_destextskills">HTML</string>
    <string name="button4_destextskills">CSS</string>
    <string name="button5_destextskills">Illustrator</string>
    <string name="button1_hobtextskills">Dance</string>
    <string name="button2_hobtextskills">Jogging</string>
    <string name="button3_hobtextskills">Food</string>


    <string name="addskillstext">Add your own skills:</string>
    <string name="addskillsbuttontext">Add</string>
    <string name="nextbuttonskills">NEXT</string>

    <!--Choose Interests-->
    <string name="chooseinterests">Choose your interests</string>
    <string name="tellusinterests">What are you interested in learning more about?</string>
    <string name="choose_interests_programming">Programming</string>
    <string name="choose_interests_design">Design</string>
    <string name="choose_interests_hobbies">Hobbies</string>
    <string name="button1_progtextinterests">Java</string>
    <string name="button2_progtextinterests">C++</string>
    <string name="button3_progtextinterests">Python</string>
    <string name="button4_progtextinterests">Ruby</string>
    <string name="button5_progtextinterests">Javascript</string>
    <string name="button1_destextinterests">UX Design</string>
    <string name="button2_destextinterests">Web Design</string>
    <string name="button3_destextinterests">HTML</string>
    <string name="button4_destextinterests">CSS</string>
    <string name="button5_destextinterests">Illustrator</string>
    <string name="button1_hobtextinterests">Dance</string>
    <string name="button2_hobtextinterests">Jogging</string>
    <string name="button3_hobtextinterests">Food</string>


    <string name="addintereststext">Add your own interests:</string>
    <string name="addinterestsbuttontext">Add</string>
    <string name="nextbuttoninterests">NEXT</string>

    <!-- Message Activity -->
    <string name="title_activity_message">MessageActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="myMessage">My Messages</string>
    <string name="title_welcome_message">Welcome to What\'s Your Story!</string>
    <string name="welcome_message">Search for individuals in your area who have
      skills and interests that you would like to learn more about. Message them to find a time to meet.
        Favorite those you would like to reach out to at a later date. Share your story!</string>


</resources>
