<!-- Michelle Fiesta -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@drawable/bgblue"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.si543.whatsyourstory.ChooseSkillsActivity"
    android:id="@+id/relativelayout" >

    <TextView
        android:id="@+id/choose_skills_text"
        android:text="@string/chooseskills"
        android:textColor="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:textSize="25sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tell_us_skills_text"
        android:text="@string/tellusskills"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_skills_text"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <!-- Users will be able to select multiple buttons with
     skills that they have. Toggle will turn on to indicate a button is selected.
     Ideally, these initial buttons would be populated with content that is popular
     among users of the app. For purposes of this course, it will initally populate with
     pre-selected buttons. -->

    <TextView
        android:id="@+id/choose_skills_programming"
        android:text="@string/choose_skills_programming"
        android:textColor="#FFFFFF"
        android:layout_below="@id/tell_us_skills_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp" />

    <ToggleButton
        android:id="@+id/button1_prog"
        android:text="@string/button1_progtextskills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choose_skills_programming"
        android:layout_alignParentStart="true"
        android:textOn="@string/button1_progtextskills"
        android:textOff="@string/button1_progtextskills"
        android:textColor="#FFFFFF"/>

    <ToggleButton
        android:id="@+id/button2_prog"
        android:text="@string/button2_progtextskills"
        android:layout_toEndOf="@id/button1_prog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choose_skills_programming"
        android:textOn="@string/button2_progtextskills"
        android:textOff="@string/button2_progtextskills"
        android:textColor="#FFFFFF"/>

    <ToggleButton
        android:id="@+id/button3_prog"
        android:text="@string/button3_progtextskills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/button2_prog"
        android:layout_below="@+id/choose_skills_programming"
        android:textOn="@string/button3_progtextskills"
        android:textOff="@string/button3_progtextskills"
        android:textColor="#FFFFFF"/>

    <ToggleButton
        android:id="@+id/button4_prog"
        android:text="@string/button4_progtextskills"
        android:layout_below="@+id/button1_prog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/button4_progtextskills"
        android:textOff="@string/button4_progtextskills"
        android:textColor="#FFFFFF"/>

    <ToggleButton
        android:id="@+id/button5_prog"
        android:text="@string/button5_progtextskills"
        android:layout_below="@+id/button1_prog"
        android:layout_toEndOf="@+id/button4_prog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/button5_progtextskills"
        android:textOff="@string/button5_progtextskills"
        android:textColor="#FFFFFF"/>

    <TextView
        android:id="@+id/choose_skills_design"
        android:text="@string/choose_skills_design"
        android:textColor="#FFFFFF"
        android:layout_below="@id/button5_prog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp" />

    <ToggleButton
        android:id="@+id/button1_des"
        android:text="@string/button1_destextskills"
        android:layout_below="@+id/choose_skills_design"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/button1_destextskills"
        android:textOff="@string/button1_destextskills"
        android:textColor="#FFFFFF"/>

    <ToggleButton
        android:id="@+id/button2_des"
        android:text="@string/button2_destextskills"
        android:layout_below="@+id/choose_skills_design"
        android:layout_toEndOf="@id/button1_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/button2_destextskills"
        android:textOff="@string/button2_destextskills"
        android:textColor="#FFFFFF"/>

    <ToggleButton
        android:id="@+id/button3_des"
        android:text="@string/button3_destextskills"
        android:layout_below="@+id/button1_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/button3_destextskills"
        android:textOff="@string/button3_destextskills"
        android:textColor="#FFFFFF"/>

    <ToggleButton
        android:id="@+id/button4_des"
        android:text="@string/button4_destextskills"
        android:layout_below="@+id/button1_des"
        android:layout_toEndOf="@+id/button3_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/button4_destextskills"
        android:textOff="@string/button4_destextskills"
        android:textColor="#FFFFFF"/>

    <ToggleButton
        android:id="@+id/button5_des"
        android:text="@string/button5_destextskills"
        android:layout_below="@+id/button1_des"
        android:layout_toEndOf="@id/button4_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/button5_destextskills"
        android:textOff="@string/button5_destextskills"
        android:textColor="#FFFFFF"/>

    <TextView
        android:id="@+id/choose_skills_hobbies"
        android:text="@string/choose_skills_hobbies"
        android:textColor="#FFFFFF"
        android:layout_below="@id/button3_des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp" />

    <ToggleButton
        android:id="@+id/button1_hob"
        android:text="@string/button1_hobtextskills"
        android:layout_below="@+id/choose_skills_hobbies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/button1_hobtextskills"
        android:textOff="@string/button1_hobtextskills"
        android:textColor="#FFFFFF"/>

    <ToggleButton
        android:id="@+id/button2_hob"
        android:text="@string/button2_hobtextskills"
        android:layout_below="@+id/choose_skills_hobbies"
        android:layout_toEndOf="@id/button1_hob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/button2_hobtextskills"
        android:textOff="@string/button2_hobtextskills"
        android:textColor="#FFFFFF"/>

    <ToggleButton
        android:id="@+id/button3_hob"
        android:text="@string/button3_hobtextskills"
        android:layout_below="@+id/choose_skills_hobbies"
        android:layout_toEndOf="@id/button2_hob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/button3_hobtextskills"
        android:textOff="@string/button3_hobtextskills"
        android:textColor="#FFFFFF"/>

    <!-- Next, users will be taken to the Choose Interests page. -->

    <Button
        android:id="@+id/nextbutton"
        android:text="@string/nextbuttonskills"
        style="?android:textAppearanceSmall"
        android:layout_width="360dp"
        android:layout_height="45dp"
        android:layout_marginTop="16sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@drawable/button_text"
        android:background= "@drawable/button_shape"
        android:singleLine="false"
        android:onClick="skillsNext"/>

</RelativeLayout>