<!-- Michelle Fiesta -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@drawable/bgblue"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.si543.whatsyourstory.ChooseInterestsActivity"
    android:id="@+id/rl_outer">

    <TextView
        android:text="@string/chooseinterests"
        android:textColor="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choose_interests_text"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:gravity="center"/>

    <TextView
        android:text="@string/tellusinterests"
        android:layout_width="fill_parent"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FFFFFF"
        android:layout_height="wrap_content"
        android:id="@+id/tell_us_interests_text"
        android:textSize="16sp"
        android:layout_below="@id/choose_interests_text"
        android:gravity="center"
        android:paddingBottom="20dp"/>

    <!-- Users will be able to select multiple buttons with
     interests that they have. Toggle will turn on to indicate a button is selected.
     Ideally, these initial buttons would be populated with content that is popular
     among users of the app. For purposes of this course, it will initally populate with
     pre-selected buttons. -->

    <TextView
        android:id="@+id/choose_interests_programming"
        android:text="@string/choose_interests_programming"
        android:textColor="#FFFFFF"
        android:layout_below="@id/tell_us_interests_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp" />

    <ToggleButton
        android:id="@+id/button1_prog_interests"
        android:text="@string/button1_progtextinterests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choose_interests_programming"
        android:layout_alignParentStart="true"
        android:textOn="@string/button1_progtextinterests"
        android:textOff="@string/button1_progtextinterests"
        android:textColor="#FFFFFF"/>

    <ToggleButton
        android:id="@+id/button2_prog_interests"
        android:text="@string/button2_progtextinterests"
        android:layout_toEndOf="@id/button1_prog_interests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choose_interests_programming"
        android:textOn="@string/button2_progtextinterests"
        android:textOff="@string/button2_progtextinterests"
        android:textColor="#FFFFFF"/>

    <ToggleButton
        android:id="@+id/button3_prog_interests"
        android:text="@string/button3_progtextinterests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/button2_prog_interests"
        android:layout_below="@+id/choose_interests_programming"
        android:textOn="@string/button3_progtextinterests"
        android:textOff="@string/button3_progtextinterests"
        android:textColor="#FFFFFF"/>

    <ToggleButton
        android:id="@+id/button4_prog_interests"
        android:text="@string/button4_progtextinterests"
        android:layout_below="@+id/button1_prog_interests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/button4_progtextinterests"
        android:textOff="@string/button4_progtextinterests"
        android:textColor="#FFFFFF"/>

    <ToggleButton
        android:id="@+id/button5_prog_interests"
        android:text="@string/button5_progtextinterests"
        android:layout_below="@+id/button1_prog_interests"
        android:layout_toEndOf="@+id/button4_prog_interests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/button5_progtextinterests"
        android:textOff="@string/button5_progtextinterests"
        android:textColor="#FFFFFF"/>

    <TextView
        android:id="@+id/choose_interests_design"
        android:text="@string/choose_interests_design"
        android:textColor="#FFFFFF"
        android:layout_below="@id/button5_prog_interests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp" />

    <ToggleButton
        android:id="@+id/button1_des_interests"
        android:text="@string/button1_destextinterests"
        android:layout_below="@+id/choose_interests_design"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/button1_destextinterests"
        android:textOff="@string/button1_destextinterests"
        android:textColor="#FFFFFF"/>

    <ToggleButton
        android:id="@+id/button2_des_interests"
        android:text="@string/button2_destextinterests"
        android:layout_below="@+id/choose_interests_design"
        android:layout_toEndOf="@id/button1_des_interests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/button2_destextinterests"
        android:textOff="@string/button2_destextinterests"
        android:textColor="#FFFFFF"/>

    <ToggleButton
        android:id="@+id/button3_des_interests"
        android:text="@string/button3_destextinterests"
        android:layout_below="@+id/button1_des_interests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/button3_destextinterests"
        android:textOff="@string/button3_destextinterests"
        android:textColor="#FFFFFF"/>

    <ToggleButton
        android:id="@+id/button4_des_interests"
        android:text="@string/button4_destextinterests"
        android:layout_below="@+id/button1_des_interests"
        android:layout_toEndOf="@+id/button3_des_interests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/button4_destextinterests"
        android:textOff="@string/button4_destextinterests"
        android:textColor="#FFFFFF"/>

    <ToggleButton
        android:id="@+id/button5_des_interests"
        android:text="@string/button5_destextinterests"
        android:layout_below="@+id/button1_des_interests"
        android:layout_toEndOf="@id/button4_des_interests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/button5_destextinterests"
        android:textOff="@string/button5_destextinterests"
        android:textColor="#FFFFFF"/>

    <TextView
        android:id="@+id/choose_interests_hobbies"
        android:text="@string/choose_interests_hobbies"
        android:textColor="#FFFFFF"
        android:layout_below="@id/button3_des_interests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp" />

    <ToggleButton
        android:id="@+id/button1_hob_interests"
        android:text="@string/button1_hobtextinterests"
        android:layout_below="@+id/choose_interests_hobbies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/button1_hobtextinterests"
        android:textOff="@string/button1_hobtextinterests"
        android:textColor="#FFFFFF"/>

    <ToggleButton
        android:id="@+id/button2_hob_interests"
        android:text="@string/button2_hobtextinterests"
        android:layout_below="@+id/choose_interests_hobbies"
        android:layout_toEndOf="@id/button1_hob_interests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/button2_hobtextinterests"
        android:textOff="@string/button2_hobtextinterests"
        android:textColor="#FFFFFF"/>

    <ToggleButton
        android:id="@+id/button3_hob_interests"
        android:text="@string/button3_hobtextinterests"
        android:layout_below="@+id/choose_interests_hobbies"
        android:layout_toEndOf="@id/button2_hob_interests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/button3_hobtextinterests"
        android:textOff="@string/button3_hobtextinterests"
        android:textColor="#FFFFFF"/>

    <Button
        android:id="@+id/nextbutton"
        android:text="@string/action_interests_next"
        style="?android:textAppearanceSmall"
        android:layout_width="360dp"
        android:layout_height="45dp"
        android:layout_marginTop="16sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@drawable/button_text"
        android:background= "@drawable/button_shape"
        android:onClick="interestsNext"/>
</RelativeLayout>

    <!-- Next, users will be taken to the Feed Activity page. -->
