<?xml version="1.0" encoding="utf-8"?>

<!-- Alice Rhee -->
<!-- Add design elements: Stephanie & Jessy -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/profileedit"
    android:background="@drawable/backrepeat"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="119dp"
            android:layout_height="119dp"
            android:id="@+id/quickContactBadge"
            android:layout_gravity="bottom|start|top"
            android:src="@drawable/default_picture"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/textView4"
            android:layout_marginTop="39dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/myname"
            android:id="@+id/textView3"
            android:textColor="@drawable/button_text"
            android:layout_marginLeft="25dp"
            android:layout_toEndOf="@+id/quickContactBadge"
            android:layout_marginTop="37dp"
            android:layout_alignTop="@+id/quickContactBadge" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/mytitle"
            android:id="@+id/textView6"
            android:textColor="@drawable/button_text"
            android:layout_below="@+id/textView3"
            android:layout_alignStart="@+id/textView3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@drawable/button_text"
            android:text="@string/mylocation"
            android:id="@+id/textView7"
            android:layout_below="@+id/textView6"
            android:layout_alignStart="@+id/textView6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/skills"
            android:textStyle="bold"
            android:id="@+id/textView4"
            android:textColor="@drawable/button_text"
            android:layout_marginStart="44dp"
            android:layout_below="@+id/quickContactBadge"
            android:layout_alignParentStart="true"
            android:layout_marginTop="48dp" />

        <!-- Will be able to pull on database of existing skills and interests for auto complete -->

        <MultiAutoCompleteTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myskills1"
            android:id="@+id/multiAutoCompleteTextView"
            android:textColor="@drawable/button_text"
            android:layout_toStartOf="@+id/imageButton2"
            android:layout_below="@+id/imageButton"
            android:layout_alignStart="@+id/textView4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/experiences"
            android:textStyle="bold"
            android:id="@+id/textView5"
            android:textColor="@drawable/button_text"
            android:layout_below="@+id/multiAutoCompleteTextView"
            android:layout_alignStart="@+id/textView4" />

        <MultiAutoCompleteTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myexperiences1"
            android:id="@+id/multiAutoCompleteTextView2"
            android:layout_below="@+id/textView5"
            android:textColor="@drawable/button_text"
            android:layout_alignStart="@+id/multiAutoCompleteTextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/interests"
            android:textStyle="bold"
            android:textColor="@drawable/button_text"
            android:id="@+id/textView"
            android:layout_below="@+id/multiAutoCompleteTextView3"
            android:layout_alignStart="@+id/multiAutoCompleteTextView3" />

        <!-- All image buttons to be replaced by pencil icons

         On clicking the icon
            Allows user to edit the text fields
         -->

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton"
            android:layout_marginEnd="32dp"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/textView4"
            android:layout_alignBottom="@+id/textView4" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton2"
            android:layout_toEndOf="@+id/quickContactBadge"
            android:layout_alignStart="@+id/imageButton"
            android:layout_alignBottom="@+id/textView5"
            android:layout_alignEnd="@+id/imageButton"
            android:layout_below="@+id/multiAutoCompleteTextView" />

        <MultiAutoCompleteTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myexperiences2"
            android:id="@+id/multiAutoCompleteTextView3"
            android:textColor="@drawable/button_text"
            android:layout_below="@+id/multiAutoCompleteTextView2"
            android:layout_alignStart="@+id/multiAutoCompleteTextView2" />

        <MultiAutoCompleteTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myinterests1"
            android:textColor="@drawable/button_text"
            android:id="@+id/multiAutoCompleteTextView4"
            android:layout_below="@+id/textView"
            android:layout_alignStart="@+id/textView" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton3"
            android:layout_toEndOf="@+id/multiAutoCompleteTextView4"
            android:layout_below="@+id/multiAutoCompleteTextView3"
            android:layout_alignStart="@+id/imageButton2"
            android:layout_alignBottom="@+id/textView" />

        <Button
            android:text="@string/action_skills_next"
            android:textStyle="bold"
            android:textColor="@drawable/button_text"
            android:background= "@drawable/button_shape"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:id="@+id/button"
            android:onClick="MyInitProfileNext"
            android:layout_below="@+id/multiAutoCompleteTextView4"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true" />

</RelativeLayout>